[gd_scene load_steps=19 format=3 uid="uid://mhjd65car3ej"]

[ext_resource type="Script" uid="uid://cuw0wgpny6ef0" path="res://modules/entities/enemies/shades/school_boss/school_boss.gd" id="1_awdse"]
[ext_resource type="PackedScene" uid="uid://6tybdjnr6y0c" path="res://modules/entities/enemies/soft_collisions/soft_collision.tscn" id="1_icyt3"]
[ext_resource type="Script" uid="uid://dr6vxgun7rg7n" path="res://addons/xsm/state.gd" id="3_w7155"]
[ext_resource type="Script" uid="uid://rhuom8qt1g2" path="res://modules/entities/enemies/shades/school_boss/boss_xsm/idle.gd" id="4_cilaq"]
[ext_resource type="Material" uid="uid://bisbatw7pxu6r" path="res://assets/debug/pixel_perfect_styling/smooth-pixel.tres" id="5_w7155"]
[ext_resource type="Texture2D" uid="uid://cik1kaomussnm" path="res://modules/entities/enemies/shades/IDLE_LR_Base.png" id="6_awdse"]
[ext_resource type="Script" uid="uid://iudu3ffhiaqs" path="res://modules/entities/enemies/shades/school_boss/boss_xsm/stunned.gd" id="6_cilaq"]
[ext_resource type="Script" uid="uid://x25f1j23134o" path="res://modules/entities/enemies/shades/school_boss/boss_xsm/death.gd" id="6_den2k"]
[ext_resource type="Script" uid="uid://b1svtud75bya4" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="9_ae4fe"]
[ext_resource type="Script" uid="uid://dc7k3kwq0lbts" path="res://addons/basecomponents/Components/2D/hitbox_component_2d.gd" id="9_den2k"]
[ext_resource type="Script" uid="uid://ct6vby56i820l" path="res://addons/basecomponents/Components/health_component.gd" id="10_ae4fe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3uvfc"]
radius = 2.23607

[sub_resource type="CircleShape2D" id="CircleShape2D_icyt3"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5niu"]
size = Vector2(18, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_cilaq"]

[sub_resource type="Animation" id="Animation_awdse"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_w7155"]
resource_name = "idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DisplayComponents/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_awdse"]
_data = {
&"RESET": SubResource("Animation_awdse"),
&"idle": SubResource("Animation_w7155")
}

[node name="SchoolBoss" type="CharacterBody2D" groups=["boss", "enemy", "saved_data", "tetherable_body"]]
z_index = 1
y_sort_enabled = true
collision_layer = 1032
collision_mask = 83
script = ExtResource("1_awdse")

[node name="ShadeFSM" type="Node" parent="."]
script = ExtResource("3_w7155")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Alive/Movement/Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Alive" type="Node" parent="ShadeFSM"]
script = ExtResource("3_w7155")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Movement/Idle")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Movement" type="Node" parent="ShadeFSM/Alive"]
script = ExtResource("3_w7155")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("..")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Idle" type="Node" parent="ShadeFSM/Alive/Movement"]
script = ExtResource("4_cilaq")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "idle"
loop_mode = 2
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="Reaction" type="Node" parent="ShadeFSM/Alive"]
script = ExtResource("3_w7155")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Movement")
metadata/_custom_type_script = "uid://dr6vxgun7rg7n"

[node name="Stunned" type="Node" parent="ShadeFSM/Alive/Reaction"]
script = ExtResource("6_cilaq")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "idle"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Movement/Idle")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="Dead" type="Node" parent="ShadeFSM"]
script = ExtResource("6_den2k")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")
metadata/_custom_type_script = "uid://gptykq0qp1fx"

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_3uvfc")

[node name="TetherableArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherableArea2D"]
shape = SubResource("CircleShape2D_icyt3")

[node name="BehaviorComponents" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SoftCollision" parent="BehaviorComponents" instance=ExtResource("1_icyt3")]
position = Vector2(0, 5)
collision_layer = 0

[node name="HurtBox" type="Area2D" parent="BehaviorComponents" node_paths=PackedStringArray("health_component")]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 4096
script = ExtResource("9_ae4fe")
health_component = NodePath("../Health")
metadata/_custom_type_script = "uid://b1svtud75bya4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehaviorComponents/HurtBox"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_m5niu")

[node name="Health" type="Node" parent="BehaviorComponents"]
unique_name_in_owner = true
script = ExtResource("10_ae4fe")
max_health = 80
metadata/_custom_type_script = "uid://ct6vby56i820l"

[node name="AttackBox" type="Area2D" parent="BehaviorComponents"]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 0
script = ExtResource("9_den2k")
metadata/_custom_type_script = "uid://dc7k3kwq0lbts"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehaviorComponents/AttackBox"]
visible = false
shape = SubResource("CircleShape2D_cilaq")

[node name="DisplayComponents" type="Node2D" parent="."]
unique_name_in_owner = true
material = ExtResource("5_w7155")

[node name="Sprite2D" type="Sprite2D" parent="DisplayComponents"]
use_parent_material = true
texture = ExtResource("6_awdse")
hframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_awdse")
}

[connection signal="mouse_entered" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_exited"]
[connection signal="Hit" from="BehaviorComponents/HurtBox" to="." method="_on_hurt_box_component_hit"]
[connection signal="Died" from="BehaviorComponents/Health" to="." method="_on_health_component_died"]
